@@ -109,8 +109,8 @@ OpenLangSearchPageAction.tooltip = Open D Search page
 #LangMembers.name = Ruby Members
 
 # Hyperlink
-hyperlinkDetector.target.name=D Editor Target
-hyperlinkDetector.name=D Hyperlink Detector
+hyperlinkDetector.target.name=D Editor
+hyperlinkDetector.name=D Open Definition Hyperlink
 
 # Compare
 #LangCompareFontDefiniton.label=Ruby compare text font
