@@ -8,6 +8,7 @@
    * Program threads and stack frame view. Non-stop mode (for supported GBDs).
    * Variables view. Dissambly view.
    * Reverse debugging (for supported GDB targets).
+ * Fixed issue #19: NPE when opening editor with hyperlinks disabled
 
 == DDT 0.8.1 (2013-09-23) ==
  * Documentation: added entry in [UserGuide#Eclipse_basics] about Eclipse memory settings optimization.
